@@ -81,6 +81,7 @@ private Q_SLOTS:
     // Slidebar slots
     void slotPositionChanged(qint64 position);
     void slotDurationChanged(qint64 duration);
+    void slotVolumeChanged(int volume);
     void slotPosition(int position);
     void slotPausePlay();
 
